--- a/config.toml
+++ b/config.toml
@@ -3,7 +3,7 @@ app-name = "YouTube"
 patches-source = "inotia00/revanced-patches"
 integrations-source = "inotia00/revanced-integrations"
 cli-source = "inotia00/revanced-cli"
-included-patches = "'Custom branding','Custom package name'"
+included-patches = "'Custom branding' 'Custom package name'"
 rv-brand = "ProBC"
 build-mode = "apk"
 apkmirror-dlurl = "https://www.apkmirror.com/apk/google-inc/youtube/"
@@ -13,7 +13,7 @@ app-name = "Music"
 patches-source = "inotia00/revanced-patches"
 integrations-source = "inotia00/revanced-integrations"
 cli-source = "inotia00/revanced-cli"
-included-patches = "'Custom branding','Custom package name'"
+included-patches = "'Custom branding' 'Custom package name'"
 rv-brand = "ProBC"
 build-mode = "apk"
 apkmirror-dlurl = "https://www.apkmirror.com/apk/google-inc/youtube-music/"
